fixed error message on mobile

--- a/browser/app.css
+++ b/browser/app.css
@@ -367,8 +367,8 @@ button {
 	}
 
 	#message {
-		top: -60px;
-    	font-size: 17px;
+		top: -85px;
+    	font-size: 14px;
 	}
 
 	.buttons-top {
